added responsive design

--- a/index.html
+++ b/index.html
@@ -71,15 +71,14 @@
             <a class="nav-link" href="#about-id">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#portfolio-id"
-              >PORTFOLIO <span class="sr-only"></span
-            ></a>
+            <a class="nav-link" href="#skills-id">SKILLS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#portfolio-id">PORTFOLIO</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com"
-              >CONTACT</a
-            >
+            <a class="nav-link" href="#contact-id">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -93,15 +92,16 @@
             <h1 class="hero-title">
               Hello, I'm Danielle<span class="gray">.</span>
             </h1>
-            <p class="hero-paragraph">
-              A <span class="bold">Front End Developer</span> with
-              <span class="bold">UX Design</span> chops <br />
-            </p>
-
-            <p class="hero-paragraph">
-              who loves
-              <span class="text-animation"></span>
-            </p>
+            <div class="hero-paragraph-all">
+              <p class="hero-paragraph">
+                A <span class="bold">Front End Developer</span> with
+                <span class="bold">UX Design</span> chops <br />
+              </p>
+              <p class="hero-paragraph">
+                who loves
+                <span class="text-animation"></span>
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-lg-12 d-flex justify-content-center">
@@ -255,6 +255,94 @@
       </div>
     </div>
     <div class="horizontal-line"></div>
+    <!-- SKILLS ---------------------------------------------------------------------------->
+    <div id="skills-id" class="skills-all">
+      <div class="container">
+        <h3 class="about-header">SKILLS</h3>
+        <h3 class="about-title text-center mb-5">Tools I use to create:</h3>
+        <div class="row mb-4 d-flex justify-content-center">
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/html-5-100.png" />
+            <span class="icon-text">HTML</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/css3-100.png" />
+            <span class="icon-text">CSS</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/javascript-100.png" />
+            <span class="icon-text">JAVASCRIPT</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/react-100.png" />
+            <span class="icon-text">REACT</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/git-100.png" />
+            <span class="icon-text">GIT</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/github-100.png" />
+            <span class="icon-text">GITHUB</span>
+          </div>
+        </div>
+        <!-- ROW 2 -->
+        <div class="row mb-4 d-flex justify-content-center">
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/visual-studio-100.png" />
+            <span class="icon-text">VS CODE</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/rest-api-100.png" />
+            <span class="icon-text">RESTFUL APIs</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/firebase-100.png" />
+            <span class="icon-text">FIREBASE</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/sass-100.png" />
+            <span class="icon-text">SASS</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/flexbox-100.png" />
+            <span class="icon-text">FLEXBOX</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/responsive-design-100.png" />
+            <span class="icon-text">RESPONSIVE DESIGN</span>
+          </div>
+        </div>
+        <!-- ROW 3 -->
+        <div class="row mb-4 d-flex justify-content-center">
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/terminal-100.png" />
+            <span class="icon-text">TERMINAL</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon-sandbox" src="./icons/code-sandbox-logo.png" />
+            <span class="icon-text">CODE SANDBOX</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/codepen-100.png" />
+            <span class="icon-text">CODEPEN</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/ux-design-100.png" />
+            <span class="icon-text">UX DESIGN</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/figma-100.png" />
+            <span class="icon-text">FIGMA</span>
+          </div>
+          <div class="icon-container col-xl col-lg-2 col-md-4">
+            <img class="icon" src="./icons/adobe-xd-100.png" />
+            <span class="icon-text">ADOBE SUITE</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="horizontal-line"></div>
     <!-- PORTFOLIO ----------------------------------------------------------------------------->
     <div id="portfolio-id" class="portfolio-all d-flex justify-content-center">
       <div class="container">
@@ -262,7 +350,9 @@
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
           <h3 class="about-title mb-5">Some projects I built</h3>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>SMARTBRAIN FACE RECOGNITION</h4>
             <p>
               Smartbrain can detect faces in your photographs! If you are
@@ -271,19 +361,29 @@
             </p>
             <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
             <div class="project-buttons">
-              <a class="portfolio-button">Details</a>
-              <a class="portfolio-button right-button">Github</a>
+              <a
+                class="portfolio-button"
+                href="https://odadki.github.io/face-recognition-app/"
+                >View App</a
+              >
+              <a
+                class="portfolio-button right-button"
+                href="https://github.com/odadki/face-recognition-app"
+                >Github</a
+              >
             </div>
           </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <img
               class="portfolio-img-update img-fluid"
-              src="./img/petconnect-home-2470.png"
+              src="./img/smartbrain-img-july.png"
             />
           </div>
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
-        <div class="row portfolio-each-project">
+        <!-- <div class="row portfolio-each-project">
           <div class="col-xl-6">
             <img
               class="portfolio-img-update img-fluid"
@@ -303,16 +403,12 @@
               <button>Github</button>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- INDIVIDUAL PROJECT - EXTRA - SAME AS TOP FORMAT----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
-            <img
-              class="portfolio-img-update img-fluid"
-              src="./img/shopping-list-img-july.png"
-            />
-          </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>SHOPPING LIST</h4>
             <p>
               Keep this shopping list handy to add, remove, or check off items
@@ -334,11 +430,21 @@
               >
             </div>
           </div>
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/shopping-list-img-july.png"
+            />
+          </div>
         </div>
 
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>ROBOFRIENDS</h4>
             <p>
               Ready for some robots? Take a look at Robofriends app - a fun way
@@ -360,7 +466,9 @@
               >
             </div>
           </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <img
               class="portfolio-img-update img-fluid"
               src="./img/robofriends-img-july.png"
@@ -369,13 +477,9 @@
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
-            <img
-              class="portfolio-img-update img-fluid"
-              src="./img/weather-img-july.png"
-            />
-          </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>WEATHER APP</h4>
             <p>
               If you're heading to another city and want to check the weather
@@ -397,10 +501,20 @@
               >
             </div>
           </div>
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/weather-img-july.png"
+            />
+          </div>
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>DICTIONARY APP</h4>
             <p>
               Need a dictionary on-the-go? Dictionary App is perfect for those
@@ -422,7 +536,9 @@
               >
             </div>
           </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <img
               class="portfolio-img-update img-fluid"
               src="./img/dictionary-home-july.png"
@@ -431,13 +547,9 @@
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
-            <img
-              class="portfolio-img-update img-fluid"
-              src="../img-ux/carrots-final-july.png"
-            />
-          </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>CARROTS COOKING</h4>
             <p>
               This UX Design project was built as a mobile-first app for kids
@@ -457,10 +569,20 @@
               >
             </div>
           </div>
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
+            <img
+              class="portfolio-img-update img-fluid"
+              src="../img-ux/carrots-final-july.png"
+            />
+          </div>
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>BOUTIQUEAPP</h4>
             <p>
               If you want a clean design with easy checkout, take a look at this
@@ -478,7 +600,9 @@
               >
             </div>
           </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <img
               class="portfolio-img-update-mobile img-fluid"
               src="./img/boutique-img-july-3.png"
@@ -487,13 +611,9 @@
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <div class="col-xl-6">
-            <img
-              class="portfolio-img-update img-fluid"
-              src="./img/petconnect-home-2470-july.png"
-            />
-          </div>
-          <div class="col-xl-6">
+          <div
+            class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
             <h4>PETCONNECT</h4>
             <p>
               A UX Design project created with Adobe XD that aims to allow users
@@ -513,8 +633,21 @@
               >
             </div>
           </div>
+          <div
+            class="portfolio-individual-img col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
+          >
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/petconnect-home-2470-july.png"
+            />
+          </div>
         </div>
       </div>
+    </div>
+    <div class="horizontal-line"></div>
+    <!-- CONTACT------------------------------------------------------------------------------>
+    <div id="contact-id" class="contact-all">
+      <h3 class="about-header">CONTACT</h3>
     </div>
     <!-- FOOTER -------------------------------------------------------------------------------->
     <footer class="footer-code">
