--- a/index.html
+++ b/index.html
@@ -261,27 +261,27 @@
         <h3 class="about-header">SKILLS</h3>
         <h3 class="about-title text-center mb-5">Tools I use to create:</h3>
         <div class="row mb-4 d-flex justify-content-center">
-          <div class="icon-container col-xl col-lg-2 col-md-4">
+          <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/html-5-100.png" />
             <span class="icon-text">HTML</span>
           </div>
-          <div class="icon-container col-xl col-lg-2 col-md-4">
+          <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/css3-100.png" />
             <span class="icon-text">CSS</span>
           </div>
-          <div class="icon-container col-xl col-lg-2 col-md-4">
+          <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/javascript-100.png" />
             <span class="icon-text">JAVASCRIPT</span>
           </div>
-          <div class="icon-container col-xl col-lg-2 col-md-4">
+          <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/react-100.png" />
             <span class="icon-text">REACT</span>
           </div>
-          <div class="icon-container col-xl col-lg-2 col-md-4">
+          <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/git-100.png" />
             <span class="icon-text">GIT</span>
           </div>
-          <div class="icon-container col-xl col-lg-2 col-md-4">
+          <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/github-100.png" />
             <span class="icon-text">GITHUB</span>
           </div>
@@ -647,7 +647,49 @@
     <div class="horizontal-line"></div>
     <!-- CONTACT------------------------------------------------------------------------------>
     <div id="contact-id" class="contact-all">
-      <h3 class="about-header">CONTACT</h3>
+      <div class="container">
+        <h3 class="about-header">CONTACT</h3>
+        <form
+          target="_blank"
+          action="https://formsubmit.co/hello.danielleoda@gmail.com"
+          method="POST"
+        >
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col">
+                <input
+                  type="text"
+                  name="name"
+                  class="form-control"
+                  placeholder="Full Name"
+                  required
+                />
+              </div>
+              <div class="col">
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  placeholder="Email Address"
+                  required
+                />
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <textarea
+              placeholder="Your Message"
+              class="form-control"
+              name="message"
+              rows="10"
+              required
+            ></textarea>
+          </div>
+          <button type="submit" class="btn btn-lg btn-dark btn-block">
+            Submit Form
+          </button>
+        </form>
+      </div>
     </div>
     <!-- FOOTER -------------------------------------------------------------------------------->
     <footer class="footer-code">
