--- a/index.html
+++ b/index.html
@@ -650,8 +650,6 @@
       <div class="container">
         <h3 class="about-header">CONTACT</h3>
         <h3 class="about-title text-center mb-5">Connect with me!</h3>
-        <input type="hidden" name="_subject" value="New submission!" />
-        <input type="hidden" name="_captcha" value="false" />
         <div class="row contact-submission-form">
           <div class="col-xl-6">
             <form
@@ -704,6 +702,17 @@
               >
                 SUBMIT
               </button>
+              <input
+                type="hidden"
+                name="_subject"
+                value="New submission from website!"
+              />
+              <input type="hidden" name="_captcha" value="false" />
+              <input
+                type="hidden"
+                name="_autoresponse"
+                value="Thank you for your submission! I will get back to you shortly."
+              />
             </form>
           </div>
         </div>
