updated ux design pages, and responsive design on all pages

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="hero-buttons-all">
             <div class="hero-button">
               <a
-                href="../pages/portfolio.html"
+                href="#portfolio-id"
                 class="resume-button-home hero-button-portfolio"
               >
                 PORTFOLIO
@@ -116,7 +116,7 @@
             </div>
             <div class="hero-button">
               <a
-                href="../pages/portfolio.html"
+                href="#contact-id"
                 class="resume-button-home hero-button-contact"
               >
                 CONTACT ME
@@ -189,66 +189,6 @@
                   RESUME
                 </a>
               </div>
-              <div class="row about-links">
-                <div class="email-linkedin-link">
-                  <div class="email-section">
-                    <span>
-                      <a
-                        href="mailto:odadaniellek@gmail.com"
-                        class="email-button"
-                        ><img
-                          src="../img/iconmonstr-email-11.svg"
-                          class="email-icon"
-                        />
-                      </a>
-                    </span>
-                    <span>
-                      <a
-                        href="mailto:hello.danielleoda@gmail.com"
-                        class="website-link"
-                        target="__blank"
-                        >hello.danielleoda@gmail.com</a
-                      >
-                    </span>
-                  </div>
-                  <div class="linkedin-section">
-                    <span>
-                      <a href="#" class="linkedin-button"
-                        ><img
-                          src="../img/iconmonstr-linkedin-5.svg"
-                          class="linkedin-icon"
-                        />
-                      </a>
-                    </span>
-                    <span>
-                      <a
-                        href="https://www.linkedin.com/in/danielle-oda-492066221/"
-                        class="website-link"
-                        target="__blank"
-                        >linkedin profile</a
-                      >
-                    </span>
-                  </div>
-                  <div class="github-section">
-                    <span>
-                      <a href="#" class="github-button"
-                        ><img
-                          src="../img/iconmonstr-github-5.svg"
-                          class="github-icon"
-                        />
-                      </a>
-                    </span>
-                    <span>
-                      <a
-                        href="https://github.com/odadki"
-                        class="website-link"
-                        target="__blank"
-                        >github</a
-                      >
-                    </span>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -320,8 +260,8 @@
             <span class="icon-text">TERMINAL</span>
           </div>
           <div class="icon-container col-xl col-lg-2 col-md-4">
-            <img class="icon-sandbox" src="./icons/code-sandbox-logo.png" />
-            <span class="icon-text">CODE SANDBOX</span>
+            <img class="icon" src="./icons/bootstrap-96.png" />
+            <span class="icon-text">BOOTSTRAP</span>
           </div>
           <div class="icon-container col-xl col-lg-2 col-md-4">
             <img class="icon" src="./icons/codepen-100.png" />
@@ -359,16 +299,26 @@
               curious, paste an image link and and see if Smartbrain's REST API
               can magically locate those faces!
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/html-5-100.png" />
+              <img class="icons-used" src="./icons/css3-100.png" />
+              <img class="icons-used" src="./icons/javascript-100.png" />
+              <img class="icons-used" src="./icons/react-100.png" />
+              <img class="icons-used" src="./icons/git-100.png" />
+              <img class="icons-used" src="./icons/github-100.png" />
+              <img class="icons-used" src="./icons/rest-api-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 class="portfolio-button"
                 href="https://odadki.github.io/face-recognition-app/"
+                target="_blank"
                 >View App</a
               >
               <a
                 class="portfolio-button right-button"
                 href="https://github.com/odadki/face-recognition-app"
+                target="_blank"
                 >Github</a
               >
             </div>
@@ -416,16 +366,24 @@
               JAVASCRIPT, this app combines a colorful design with practical
               functionality that will look beautiful on any device.
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/html-5-100.png" />
+              <img class="icons-used" src="./icons/css3-100.png" />
+              <img class="icons-used" src="./icons/javascript-100.png" />
+              <img class="icons-used" src="./icons/github-100.png" />
+              <img class="icons-used" src="./icons/responsive-design-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="https://odadki.github.io/shopping-list/"
                 class="portfolio-button"
+                target="_blank"
                 >View App</a
               >
               <a
                 href="https://github.com/odadki/shopping-list"
                 class="portfolio-button right-button"
+                target="_blank"
                 >Github</a
               >
             </div>
@@ -452,16 +410,27 @@
               created with React and is fully responsive so you can view it on
               any device!
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/html-5-100.png" />
+              <img class="icons-used" src="./icons/css3-100.png" />
+              <img class="icons-used" src="./icons/javascript-100.png" />
+              <img class="icons-used" src="./icons/react-100.png" />
+              <img class="icons-used" src="./icons/git-100.png" />
+              <img class="icons-used" src="./icons/github-100.png" />
+              <img class="icons-used" src="./icons/flexbox-100.png" />
+              <img class="icons-used" src="./icons/responsive-design-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="https://odadki.github.io/robofriends-app-2/"
                 class="portfolio-button"
+                target="_blank"
                 >View App</a
               >
               <a
                 href="https://github.com/odadki/robofriends-app-2"
                 class="portfolio-button right-button"
+                target="_blank"
                 >Github</a
               >
             </div>
@@ -487,16 +456,27 @@
               allows you to enter a city and view the current conditions and
               forecast for the week!
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/html-5-100.png" />
+              <img class="icons-used" src="./icons/css3-100.png" />
+              <img class="icons-used" src="./icons/javascript-100.png" />
+              <img class="icons-used" src="./icons/react-100.png" />
+              <img class="icons-used" src="./icons/github-100.png" />
+              <img class="icons-used" src="./icons/bootstrap-96.png" />
+              <img class="icons-used" src="./icons/rest-api-100.png" />
+              <img class="icons-used" src="./icons/responsive-design-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="https://quirky-lichterman-84f5c8.netlify.app/"
                 class="portfolio-button"
+                target="_blank"
                 >View App</a
               >
               <a
                 href="https://github.com/odadki/react-weather-app"
                 class="portfolio-button right-button"
+                target="_blank"
                 >Github</a
               >
             </div>
@@ -522,16 +502,27 @@
               that pronounces the word for you so you'll know for certain your
               pronunciation is on-point!
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/html-5-100.png" />
+              <img class="icons-used" src="./icons/css3-100.png" />
+              <img class="icons-used" src="./icons/javascript-100.png" />
+              <img class="icons-used" src="./icons/react-100.png" />
+              <img class="icons-used" src="./icons/github-100.png" />
+              <img class="icons-used" src="./icons/bootstrap-96.png" />
+              <img class="icons-used" src="./icons/rest-api-100.png" />
+              <img class="icons-used" src="./icons/responsive-design-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="https://loving-hermann-fdb059.netlify.app/"
                 class="portfolio-button"
+                target="_blank"
                 >View App</a
               >
               <a
                 href="https://github.com/odadki/dictionary-project"
                 class="portfolio-button right-button"
+                target="_blank"
                 >Github</a
               >
             </div>
@@ -559,12 +550,17 @@
               and responsive, with designs fitted to mobile, tablet and
               desktop-sized devices.
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/ux-design-100.png" />
+              <img class="icons-used" src="./icons/figma-100.png" />
+              <img class="icons-used" src="./icons/responsive-design-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="../projects/ux-two-cook.html"
                 class="portfolio-button"
                 alt="Carrots Cooking App for Kids"
+                target="_blank"
                 >Project Details</a
               >
             </div>
@@ -590,12 +586,16 @@
               includes a simple color scheme with clear buttons so users are
               certain on the navigation.
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/ux-design-100.png" />
+              <img class="icons-used" src="./icons/figma-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="../projects/ux-one-boutique.html"
                 class="portfolio-button"
                 alt="BoutiqueApp Clothing"
+                target="_blank"
                 >Project Details</a
               >
             </div>
@@ -623,12 +623,17 @@
               to see. Going through usability studies, the design went though a
               few iterations in order to iron out pain points.
             </p>
-            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-icons-container mb-4">
+              <img class="icons-used" src="./icons/ux-design-100.png" />
+              <img class="icons-used" src="./icons/adobe-xd-100.png" />
+              <img class="icons-used" src="./icons/responsive-design-100.png" />
+            </div>
             <div class="project-buttons">
               <a
                 href="../projects/ux-three-pet.html"
                 class="portfolio-button"
                 alt="PetConnect Adoption Flow"
+                target="_blank"
                 >Project Details</a
               >
             </div>
@@ -650,10 +655,18 @@
       <div class="container">
         <h3 class="about-header">CONTACT</h3>
         <h3 class="about-title text-center mb-5">Connect with me!</h3>
+
         <div class="row contact-submission-form">
           <div class="col-xl-6">
+            <h6>
+              If you'd like to contact me on possible work opportunities, ask me
+              any questions, or just want to say hello, please drop me a message
+              - I'd be happy to chat!
+              <br />
+              <br />
+              Thank you, and I look forward to hearing from you!
+            </h6>
             <form
-              target="_blank"
               action="https://formsubmit.co/hello.danielleoda@gmail.com"
               method="POST"
               id="form-id"
@@ -714,6 +727,53 @@
                 value="Thank you for your submission! I will get back to you shortly."
               />
             </form>
+          </div>
+          <div class="col-xl-6 contact-icon-links">
+            <h4 class="text-center mb-3">SOCIAL LINKS</h4>
+            <h6 class="text-center">
+              You can also find me in these social spaces!
+            </h6>
+            <div class="d-flex justify-content-center contact-social-links">
+              <div class="linkedin-section">
+                <span>
+                  <a
+                    href="https://www.linkedin.com/in/danielle-oda-492066221/"
+                    class="linkedin-button"
+                    target="_blank"
+                    ><img
+                      src="../img/iconmonstr-linkedin-5.svg"
+                      class="linkedin-icon social-link"
+                    />
+                  </a>
+                </span>
+              </div>
+              <div class="github-section">
+                <span>
+                  <a
+                    href="https://github.com/odadki"
+                    class="github-button social-link"
+                    target="_blank"
+                    ><img
+                      src="../img/iconmonstr-github-5.svg"
+                      class="github-icon"
+                    />
+                  </a>
+                </span>
+              </div>
+              <div class="email-section">
+                <span>
+                  <a
+                    href="https://www.instagram.com/dodabirb/"
+                    class="email-button social-link"
+                    target="_blank"
+                    ><img
+                      src="../img/iconmonstr-instagram-15.svg"
+                      class="email-icon"
+                    />
+                  </a>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
