--- a/projects/ux-three-pet.html
+++ b/projects/ux-three-pet.html
@@ -39,43 +39,8 @@
     <link rel="stylesheet" href="../style-ux.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div>
-        <a class="navbar-brand" href="/"
-          ><img src="../img/doda-logo.png" class="logo-img"
-        /></a>
-      </div>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/portfolio.html"
-              ><span class="sr-only">PORTFOLIO </span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com"
-              >CONTACT</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
     <div class="container">
-      <div class="row">
+      <div class="row title-container">
         <div class="col-sm-6">
           <div class="title-text">
             <h3 class="title-info case-study">Case Study:</h3>
@@ -96,7 +61,7 @@
           <h2 class="project-overview-title all-caps-title">
             Project Overview
           </h2>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-sm-12 col-12">
             <div class="p-3">
               <h4>The problem</h4>
               <p>
@@ -115,7 +80,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-sm-12 col-12">
             <div class="p-3">
               <h4>The product</h4>
               <p>
@@ -571,39 +536,6 @@
         </div>
       </div>
     </div>
-    <footer class="footer-all">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-lg-2 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/ux-one-boutique.html">BOUTIQUEAPP</a>
-            </span>
-          </div>
-          <div class="col-lg-3 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/ux-two-cook.html">CARROTS</a>
-            </span>
-          </div>
-          <div class="col-lg-2 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/ux-three-pet.html" class="active"
-                >PETCONNECT</a
-              >
-            </span>
-          </div>
-          <div class="col-lg-3 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/frontend-dictionary.html">DICTIONARY</a>
-            </span>
-          </div>
-          <div class="col-lg-2 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/frontend-weather.html">WEATHERAPP</a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </footer>
     <footer class="footer-code">
       <div class="text-center">
         This page is
