--- a/projects/ux-two-cook.html
+++ b/projects/ux-two-cook.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="../style-ux.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light">
       <div>
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
@@ -73,9 +73,9 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
     <div class="container">
-      <div class="row">
+      <div class="row title-container">
         <div class="col-sm-6">
           <div class="title-text">
             <h3 class="title-info case-study">Case Study:</h3>
@@ -91,11 +91,11 @@
         </div>
       </div>
       <div class="project-overview-section">
-        <div class="row">
+        <div class="project-overview-media row">
           <h2 class="project-overview-title all-caps-title">
             Project Overview
           </h2>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12">
             <div class="p-3">
               <h4>The problem</h4>
               <p>
@@ -117,7 +117,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-sm-12 col-12">
             <div class="p-3">
               <h4>The product</h4>
               <p>
@@ -506,37 +506,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer-all">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-lg-2 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/ux-one-boutique.html">BOUTIQUEAPP</a>
-            </span>
-          </div>
-          <div class="col-lg-3 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/ux-two-cook.html" class="active">CARROTS</a>
-            </span>
-          </div>
-          <div class="col-lg-2 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/ux-three-pet.html">PETCONNECT</a>
-            </span>
-          </div>
-          <div class="col-lg-3 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/frontend-dictionary.html">DICTIONARY</a>
-            </span>
-          </div>
-          <div class="col-lg-2 col-md-4 mb-2">
-            <span class="footer-link">
-              <a href="../projects/frontend-weather.html">WEATHERAPP</a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </footer>
+
     <footer class="footer-code">
       <div class="text-center">
         This page is
