updated nav, responsive styling

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col-lg-12">
           <div class="hero-desc">
             <h1 class="hero-title">
-              Hello, I'm Danielle<span class="gray">.</span>
+              Hello, I'm Danielle<span class="dot">.</span>
             </h1>
             <div class="hero-paragraph-all">
               <p class="hero-paragraph">
@@ -142,7 +142,9 @@
             /></span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 about-section">
-            <h3 class="about-title">Who is Danielle?</h3>
+            <h3 class="about-title">
+              Who is Danielle<span class="dot">?</span>
+            </h3>
             <p class="about-paragraph mt-3">
               A musician turned Front-End Developer who has an eye for UX
               Design.
@@ -199,7 +201,9 @@
     <div id="skills-id" class="skills-all">
       <div class="container">
         <h3 class="about-header">SKILLS</h3>
-        <h3 class="about-title text-center mb-5">Tools I use to create:</h3>
+        <h3 class="about-title text-center mb-5">
+          Tools I use to create<span class="dot">:</span>
+        </h3>
         <div class="row mb-4 d-flex justify-content-center">
           <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
             <img class="icon" src="./icons/html-5-100.png" />
@@ -289,7 +293,9 @@
         <h3 class="about-header">PORTOFLIO</h3>
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
-          <h3 class="about-title mb-5">Some projects I built</h3>
+          <h3 class="about-title mb-5">
+            Some projects I built<span class="dot">.</span>
+          </h3>
           <div
             class="portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
           >
@@ -654,7 +660,9 @@
     <div id="contact-id" class="contact-all">
       <div class="container">
         <h3 class="about-header">CONTACT</h3>
-        <h3 class="about-title text-center mb-5">Connect with me!</h3>
+        <h3 class="about-title text-center mb-5">
+          Connect with me<span class="dot">!</span>
+        </h3>
 
         <div class="row contact-submission-form">
           <div class="col-xl-6">
