--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="all-buttons">
               <div class="hero-button">
                 <a
-                  href="../img/ux-resume.pdf"
+                  href="./img/resume-website.pdf"
                   class="resume-button-home hero-button-portfolio"
                   target="_blank"
                 >
@@ -281,7 +281,7 @@
           </div>
           <div class="icon-container col-xl col-lg-2 col-md-4">
             <img class="icon" src="./icons/adobe-xd-100.png" />
-            <span class="icon-text">ADOBE SUITE</span>
+            <span class="icon-text">ADOBE XD</span>
           </div>
         </div>
       </div>
