updated about section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </p>
             <p class="about-paragraph-two mt-4">
               I'm passionate about building on the intersection of UX Design and
-              the engineering the code to make it happen. A highly functional
+              engineering the code to make it happen. A highly functional
               design, user experience and elegant code structure all matter to
               me. I believe in the power of simplicity.
               <br />
