updated about section and contact section for smaller devices

--- a/index.html
+++ b/index.html
@@ -177,9 +177,8 @@
               <br />
               <br />
               I'm enjoy creating things, refining them, and making them better.
-              I am great at working independently and with others, and am open
-              to looking forward to working with a team that shares similar
-              values.
+              I am great at working independently and with others, and am
+              looking forward to working with a team that shares similar values.
             </p>
             <div class="all-buttons">
               <div class="hero-button">
